@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-25T16:31:45Z",
+  "timestamp" : "2022-08-26T08:29:02Z",
   "count_outdated" : 751,
   "uniques_outdated" : 392,
-  "count" : 767,
-  "uniques" : 401,
+  "count" : 768,
+  "uniques" : 402,
   "clones" : [
     {
       "timestamp": "2022-08-13T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-08-25T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
